--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "@types/redux-logger": "^3.0.6",
     "axios": "^0.18.0",
+    "copy-to-clipboard": "^3.0.8",
     "history": "^4.7.2",
+    "leven": "^2.1.0",
     "lodash": "^4.17.11",
     "moment": "^2.22.2",
     "react": "^16.6.0",
@@ -31,6 +33,10 @@
     "@types/node": "^10.12.2",
     "@types/react": "^16.4.18",
     "@types/react-dom": "^16.0.9",
+    "tslint": "^5.11.0",
+    "tslint-config-prettier": "^1.15.0",
+    "tslint-config-standard": "^8.0.1",
+    "tslint-react": "^3.6.0",
     "typescript": "^3.1.6"
   }
 }
