modified goals stuff, added journal, feeds, started songbook'

--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "homepage": "https://lakhai.github.io/dash_webend",
   "dependencies": {
     "@types/draft-js": "^0.10.26",
+    "@types/lodash": "^4.14.118",
+    "@types/react-router-dom": "^4.3.1",
     "@types/redux-logger": "^3.0.6",
+    "avataaars": "^1.2.1",
     "axios": "^0.18.0",
     "copy-to-clipboard": "^3.0.8",
     "draft-js": "^0.10.5",
@@ -22,6 +25,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
+    "rss-parser": "^3.5.4",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.83.0"
   },
