storybook fail, added some translations, component folder structure, quest components, date picker, module resolver and economy/savings goals containers

--- a/package.json
+++ b/package.json
@@ -4,30 +4,43 @@
   "private": true,
   "homepage": "https://lakhai.github.io/dash_webend",
   "dependencies": {
+    "@storybook/addon-storyshots": "^4.0.12",
+    "@storybook/cli": "^4.0.12",
     "@types/draft-js": "^0.10.26",
     "@types/lodash": "^4.14.118",
     "@types/react-router-dom": "^4.3.1",
+    "@types/react-test-renderer": "^16.0.3",
     "@types/redux-logger": "^3.0.6",
+    "@types/storybook__addon-actions": "^3.4.1",
+    "@types/storybook__addon-links": "^3.3.3",
     "avataaars": "^1.2.1",
+    "awesome-typescript-loader": "^5.2.1",
     "axios": "^0.18.0",
     "copy-to-clipboard": "^3.0.8",
     "draft-js": "^0.10.5",
     "history": "^4.7.2",
+    "jest": "^23.6.0",
     "leven": "^2.1.0",
     "lodash": "^4.17.11",
     "moment": "^2.22.2",
     "react": "^16.6.0",
-    "react-dom": "^16.6.0",
+    "react-docgen-typescript-webpack-plugin": "^1.1.0",
+    "react-dom": "^16.6.3",
     "react-redux": "^5.1.0",
     "react-router-dom": "^4.3.1",
     "react-scripts-ts": "3.1.0",
+    "react-test-renderer": "^16.6.3",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "rss-parser": "^3.5.4",
+    "semantic-ui-calendar-react": "^0.12.1",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.83.0"
+    "semantic-ui-react": "^0.83.0",
+    "storybook": "^1.0.0",
+    "ts-jest": "^23.10.5",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -35,18 +48,31 @@
     "start": "react-scripts-ts start",
     "build": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
-    "eject": "react-scripts-ts eject"
+    "eject": "react-scripts-ts eject",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "devDependencies": {
-    "@types/jest": "^23.3.9",
+    "@storybook/addon-actions": "^4.0.12",
+    "@storybook/addon-info": "^4.0.12",
+    "@storybook/addon-knobs": "^4.0.12",
+    "@storybook/addon-links": "^4.0.12",
+    "@storybook/addons": "^4.0.12",
+    "@storybook/react": "^4.0.12",
+    "@types/jest": "^23.3.10",
     "@types/node": "^10.12.2",
     "@types/react": "^16.4.18",
-    "@types/react-dom": "^16.0.9",
+    "@types/react-dom": "^16.0.11",
+    "@types/storybook__react": "^4.0.0",
+    "babel-core": "^6.26.3",
+    "babel-plugin-module-resolver": "^3.1.1",
+    "babel-runtime": "^6.26.0",
     "gh-pages": "^2.0.1",
+    "storybook-addon-jsx": "^6.0.0",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.15.0",
     "tslint-config-standard": "^8.0.1",
     "tslint-react": "^3.6.0",
-    "typescript": "^3.1.6"
+    "typescript": "^3.2.2"
   }
 }
