--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/redux-logger": "^3.0.6",
     "@types/storybook__addon-actions": "^3.4.1",
     "@types/storybook__addon-links": "^3.3.3",
+    "aphrodite": "^2.2.3",
     "avataaars": "^1.2.1",
     "awesome-typescript-loader": "^5.2.1",
     "axios": "^0.18.0",
@@ -22,6 +23,7 @@
     "jest": "^23.6.0",
     "leven": "^2.1.0",
     "lodash": "^4.17.11",
+    "midi-sounds-react": "^1.2.54",
     "moment": "^2.22.2",
     "react": "^16.6.0",
     "react-docgen-typescript-webpack-plugin": "^1.1.0",
