--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.18.0",
     "copy-to-clipboard": "^3.0.8",
     "draft-js": "^0.10.5",
+    "file-loader": "^3.0.1",
     "history": "^4.7.2",
     "jest": "^23.6.0",
     "leven": "^2.1.0",
