--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "awesome-typescript-loader": "^5.2.1",
     "axios": "^0.18.0",
     "copy-to-clipboard": "^3.0.8",
+    "css-loader": "^2.1.0",
     "draft-js": "^0.10.5",
     "file-loader": "^3.0.1",
     "history": "^4.7.2",
